--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
+
+* {
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.colors {
+    /* Cyan */
+    background-color: #2acfcf;
+    /* Dark Violet */
+    background-color: #3b3054;
+    /* Red */
+    background-color: #f46262;
+    /* Gray */
+    background-color: #bfbfbf;
+    /* Grayish Violet */
+    background-color: #9e9aa7;
+    /* Very Dark Blue */
+    background-color: #35323e;
+    /* Very Dark Violet */
+    background-color: #232127;
+
 }
